# rps-arena

./: .binpath  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  deploy.yml
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml  build.rs  rps_arena_client.idl
client/src/: lib.rs  rps_arena_client.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: CopyAddress.tsx  CreateGame.tsx  GameCard.tsx  Header.tsx  Leaderboard.tsx  NetworkSelector.tsx
frontend/src/lib/: api.ts  network.ts  program.ts  wallet.ts
sources/: rps_arena.opt.wasm
src/: lib.rs
tests/: gtest.rs
